--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tm808
+name: "Kulungile"
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -41,6 +41,9 @@ dependencies:
   gradient_widgets: ^0.6.0
   image_picker: ^0.8.6
   camera: ^0.10.0+4
+  gallery_saver: ^2.3.2
+  image_gallery_saver: ^1.7.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
